# teapot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  pyproject.toml  teapot.sources.yaml.example
.instances/: chai.md
configs/: apertus-70b-secular.config  apertus-70b-stage1-think.config  apertus-70b-stage2-ethics.config  apertus-70b-stage3-tools.config  cve-backport-qwen3-coder-full.config  cve-backport-qwen3-coder-qlora.config  cve-backport-qwen35-27b.config  cve-backport.config  defconfig  karma-electric.config  ke-v11-reward-model.config  ke-v12-secular.config  test-llama-8b.config
data/: dzongkha-targeted.jsonl
deepspeed_configs/: zero3-no-offload.json  zero3-offload.json
docs/: DESIGN.md  LICENSES.md  MODULES.md  redteam-setup.md
schemas/: config.schema.json  module.schema.json
scripts/: compose.py  data_fetch.py  lockfile.py  run-v4-eval.sh  sbom.py  train.py  training_adapter.py  validate_compose.py  validate_module.py
spec/: prompt.md  teapot-agent-contract.md  teapot-agent.template.md
teapot/: __init__.py  __main__.py  cli.py  compose.py  configure.py  curation.py  data_fetch.py  hardware.py  hf_module.py  lockfile.py  root.py  sbom.py  sources.py  templates.py  train_common.py  train_full_hf.py  train_qlora_hf.py  train_unsloth.py  training_adapter.py  validate_compose.py  validate_module.py
tests/: test_compose.py  test_config_schema.py  test_consequence_aegis.py  test_consequence_prepare.py  test_curation.py  test_cve_backport.py  test_eval_tools.py  test_full_training.py  test_hf_module.py  test_ke_hf_modules.py  (+7 more)
(+66 files in other folders)
